// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ad-container header ad 1`] = `
<View
  nativeID="ad-slot-wrapper-header"
>
  <div
    id="ad-header"
  />
</View>
`;

exports[`ad-container inline ad 1`] = `
<View
  nativeID="ad-slot-wrapper-inline-ad"
>
  <div
    id="ad-article-inline"
  />
</View>
`;

exports[`ad-container pixel ad 1`] = `
<View
  nativeID="ad-slot-wrapper-pixel"
>
  <div
    id="ad-pixel"
  />
</View>
`;

exports[`ad-container pixelskin ad 1`] = `
<View
  nativeID="ad-slot-wrapper-pixelskin"
>
  <div
    id="ad-pixelskin"
  />
</View>
`;

exports[`ad-container pixelteads ad 1`] = `
<View
  nativeID="ad-slot-wrapper-pixelteads"
>
  <div
    id="ad-pixelteads"
  />
</View>
`;
